force-app/main/default/objects/AGI_Knowledge__kav/AGI_Knowledge__kav.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>AGI Knowledge</label>
    <pluralLabel>AGI Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>