force-app/main/default/objects/AGI_Knowledge__kav/fields/FAQ__c.field-meta.xml
<CustomField>
    <fullName>FAQ__c</fullName>
    <label>FAQ</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>