force-app/main/default/objects/AGI_Knowledge__kav/fields/Spec_Product_File__c.field-meta.xml
<CustomField>
    <fullName>Spec_Product_File__c</fullName>
    <label>Spec &amp; Product File</label>
    <type>File</type>
</CustomField>