force-app/main/default/objects/AGI_Knowledge__kav/fields/Syarat_Ketentuan__c.field-meta.xml
<CustomField>
    <fullName>Syarat_Ketentuan__c</fullName>
    <label>Syarat &amp; Ketentuan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>