force-app/main/default/objects/AGI_Knowledge__kav/fields/Syarat_Ketentuan_File__c.field-meta.xml
<CustomField>
    <fullName>Syarat_Ketentuan_File__c</fullName>
    <label>Syarat &amp; Ketentuan File</label>
    <type>File</type>
</CustomField>